<resources>
    <string name="app_name">Taxi JJ</string>
    <string name="app_name_cap">Taxi JJ</string>
    <string name="googlekey">AIzaSyDJND85prbbI9SCQKdslcWqx4zsQ0-Odhg</string>
    <string name="googlekey_other">AIzaSyAJ7FiQCb5Rz6u7borWSjDMmQeozNN2tIE</string>
    <string name="FACEBOOK_APP_ID">292833911373829</string>
    <string name="facebook_app_id">292833911373829</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">fa87baf0e4acca3f159e5b9dd3f11f01</string>
    <string name="default_notification_channel_id">Channel_ID</string>
    <string name="areusure">Are you sure?</string>
    <string name="tocancel">to you want cancel this request</string>
    <string name="allowpermission">Allow Permission</string>
    <string name="nessper">This permission is necessary to use Taxi JJ App.</string>
    <string name="allow">Allow</string>
    <string name="closeapp">Close App</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="login_sm">Login</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="logface">LOGIN WITH FACEBOOK</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="pickuplocation">Pick Up Location</string>
    <string name="droplocation">Dropoff location</string>
    <string name="sign_sm">Signup</string>
    <string name="bookletter">BOOK LATER</string>
    <string name="booknow">BOOK NOW</string>
    <string name="myprofile">Profile</string>
    <string name="companyprofile">User Pin</string>
    <string name="mywallet">Wallet</string>
    <string name="ridehistory">History</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="setdrop">Set Dropoff Location</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="pleaseenteremailid">Enter your email id</string>
    <string name="email">email id</string>
    <string name="submit">Submit</string>
    <string name="distance">Distance</string>
    <string name="estimatefare">Estimate</string>
    <string name="timearriving">Time Arrive</string>
    <string name="sendreq">SEND TO REQUEST RIDE</string>
    <string name="cancel">Cancel</string>
    <string name="pleasewait">Please wait...</string>
    <string name="request">Request</string>
    <string name="waitsearchdriver">Please wait, we are searching for drivers...</string>
    <string name="seldatetime">Select Date Time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="areyousure">Please confirm, to cancel this ride?</string>
    <string name="thisreqnotacc">Unfortunately the booking Request was not succesfull!!</string>
    <string name="plstryagain">Please try again later!</string>
    <string name="applycoopn">Apply Coupon</string>
    <string name="entercoponcode">Enter Coupon Code</string>
    <string name="apply">Apply</string>
    <string name="yourcodeappsucc">Your Coupon Code has been applied successfully.</string>
    <string name="invalid">Invalid</string>
    <string name="codeisinvalid">The entered code is invalid. Please enter right coupon code.</string>
    <string name="accept_sm">Accept</string>
    <string name="cantbookreq">Please book at least 3 minutes ahead of time</string>
    <string name="rideschedule">Your booking is scheduled</string>
    <string name="ontheway">On the way</string>
    <string name="driverontheway">Your driver is on the way</string>
    <string name="driverdetail">Driver Detail</string>
    <string name="personal">Personal</string>
    <string name="cancelbooking">Cancel Booking</string>
    <string name="yourbill">Your Invoice</string>
    <string name="howwasride">How was your ride?</string>
    <string name="entercomment">Enter your comment</string>
    <string name="money">Money</string>
    <string name="cashless"><![CDATA[Cashless, Hassle-free rides & more]]></string>
    <string name="currentbal">Your current balance</string>
    <string name="addhitechmoney">Add Taxi JJ Dollars</string>
    <string name="entermoney">Enter an amount between $10 - $100</string>
    <string name="billpaywith">Bill pay with</string>
    <string name="driver">Driver</string>
    <string name="help">Help</string>
    <string name="history">History</string>
    <string name="bookingsuccess">Booking Sucessful</string>
    <string name="taxijj">TAXI JJ</string>
    <string name="companyNoMember">  You are not member of company. So you can not use this function.  </string>
    <string name="companyDeactive">  Your company did not allow you to use this feature.  </string>
    <string name="company_deactive_alert">  Your company is not allowed to use this feature now.  </string>
    <string name="yourbookcon">Your booking request has been accepted.\nDriver will pick you up soon.</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="reply">Reply</string>
    <string name="langhespeak">Language: English</string>
    <string name="entermobile">Enter mobile number</string>
    <string name="enterpass">Enter Password</string>
    <string name="invalidcredential">Invalid Credentials</string>
    <string name="plsenfrst">Please enter first name</string>
    <string name="plsenlst">Please enter last name</string>
    <string name="plsenterphone">Please enter your phone number</string>
    <string name="plsemail">Please enter email id</string>
    <string name="plsenpass">Enter Password</string>
    <string name="adddriver">Add favorite Driver</string>
    <string name="requestcancel">cancel</string>
    <string name="yourrequestiscanceled">Su solicitud de carrera ha sido cancelada por el conductor</string>
    <string name="ok">Ok</string>
    <string name="solicite">Searching</string>
    <string name="driverasfav">This driver has been added to your favorite driver list.</string>
    <string name="unfav">Driver has been removed from your favorite Driver list</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="tripfinish">Trip has been completed</string>
    <string name="yourridefinish">Completed ride</string>
    <string name="driverarrived">Driver arrived</string>
    <string name="yourdriverarr">Your driver has arrived</string>
    <string name="yourbookaccept">Un taxista ha aceptado su solicitud</string>
    <string name="tripstart">Ha comenzado su carrera</string>
    <string name="tripstarted">Trip started</string>
    <string name="ridecomp">Ride completed</string>
    <string name="favdriver">Favorite Driver</string>
    <string-array name="language">
        <item>@string/english</item>
        <item>@string/spanish</item>
    </string-array>
    <string name="wevarify">We will verify your mobile number</string>
    <string name="wantcont">Do you want to continue?</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="driverreceive">Driver receives</string>
    <string name="waitdriverconfirmation">Please wait for driver confirmation</string>
    <string name="notenough">You do not enough balance in your wallet</string>
    <string name="something">Wallet balance too low</string>
    <string name="setpickup">Update dropoff location</string>
    <string name="youonlyuse">For the security of our drivers, you can only use the cash option,if your identity is identified, please upload a goverment photo Id or crdit/debit card.</string>
    <string name="tips">Tip</string>
    <string name="areyouwilltip">Would you like to tip the driver</string>
    <string name="entertipsamount">Enter Tip Amount</string>
    <string name="ridedetail">Ride Detail</string>
    <string name="bookingno">Booking</string>
    <string name="sendrequest">Send request</string>
    <string name="selectpick">Please select Pickup location</string>
    <string name="selectdrop">Please Select Drop off location</string>
    <string name="identynoti">Your identity has not been identified yet, so you can not use the cash option</string>
    <string name="bookingnoid">Booking Id</string>
    <string name="drivernotavb"> This driver is currently not available</string>
    <string name="entercode">Enter code.</string>
    <string name="enteramount">Please enter amount.</string>
    <string name="payment">Payment</string>
    <string name="discount">Discount</string>
    <string name="expire">Code expired.</string>
    <string name="allreadyused">This code has already been used by you.</string>
    <string name="alreadylog">You are already logged in from a different device. Would you like to log out of the other device?</string>
    <string name="appupdateneed">New version available. Please update before continuing</string>
    <string name="remindlater">Remind me Later</string>
    <string name="nodrivers">No Drivers available.</string>
    <string name="searchdriver">Search by name</string>
    <string name="savecard">Save Card</string>
    <string name="cards">Add Card</string>
    <string name="removecard">Remove Card</string>
    <string name="yourcarddetailsaved">Your card details are saved successfully.</string>
    <string name="cardupdated">Card details updated.</string>
    <string name="cardremoved">Card removed.</string>
    <string name="update">Update</string>
    <string name="pleaseaddcarddetail">First add valid card details for card payment.</string>
    <string name="wrongpoint">Wrong point selection</string>
    <string name="wrongdrop">Please select a destination </string>
    <string name="wrongpick">Please select a pickup location</string>
    <string name="areucon">please confirm this drop off location?</string>
    <string name="addpointoint">Add location</string>
    <string name="droppoint">Drop off location</string>
    <string name="seldroppoint">Please select a dropoff location</string>
    <string name="click_getin">please define where you want to Add Drop off location</string>
    <string name="click_getout">please define where you want to be dropped off</string>
    <string name="dragdrop">Now drag and drop your pickup and dropoff location for right selection.</string>
    <string name="confirm">Confirm</string>
    <string name="minaway">min away</string>
    <string name="badconn">Bad Server Connection</string>
    <string name="enjoyride">Enjoy your ride.</string>
    <string name="onride">on Ride</string>
    <string name="drivarr">Driver Arrived</string>
    <string name="ddriverhasarr">Your Driver has Arrived.</string>
    <string name="discountapplied">Discount applied :</string>
    <string name="plsgiverating">Please give rating</string>
    <string name="plschkemaillink">Please check reset password mail is send to your email id</string>
    <string name="emailnotexist">This Email id is not exist</string>
    <string name="enterfirstname">Please enter First name</string>
    <string name="enterlastname">Please enter Last name</string>
    <string name="emteremail">Please enter email id</string>
    <string name="identi">your identity is identified.</string>
    <string name="identynotide">your identity is not identified.</string>
    <string name="servererror">Server Error,Please Try again..</string>
    <string name="completed">Complete</string>
    <string name="canceled">Canceled</string>
    <string name="drivernotfound">Driver Not Found</string>
    <string name="nodriverfound">No driver is available with this car type ,Try with other car type.</string>
    <string name="selcartype">Please Select Car Type</string>
    <string name="nodrivers_s">No Drivers</string>
</resources>