<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context="main.com.jjtaxiuser.activity.WalletActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:focusableInTouchMode="true"
        >

        <RelativeLayout
            android:id="@+id/mainlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimaryDark"

                android:minHeight="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/CustomTheme" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/exit_app_but"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:visibility="visible">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_back" />
                </RelativeLayout>



            </LinearLayout>
<LinearLayout
    android:gravity="center"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:src="@drawable/hit_textlogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/money"
        android:textColor="@color/white"
        android:textSize="@dimen/small" />

</LinearLayout>
        </RelativeLayout>

        <ScrollView
            android:background="@color/white"
            android:layout_above="@+id/addmoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainlay">

            <LinearLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/wallet" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/cashless"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/large" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/currentbal"
                        android:textStyle="bold"
                        android:textColor="@color/buttoncol"
                        android:textSize="@dimen/medium" />

                    <TextView
                        android:id="@+id/totalamount"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:text="$0.00"
                        android:textStyle="bold"
                        android:textColor="@color/buttoncol"
                        android:textSize="@dimen/medium" />

                </RelativeLayout>

<View
    android:layout_marginTop="10dp"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="0.5dp"></View>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/buttoncol"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/addhitechmoney"
                    android:textSize="@dimen/large" />

                <EditText
                    android:id="@+id/amount_et"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/entermoney"
                    android:inputType="number"
                    android:background="@drawable/border_grey_rec"
                    android:textSize="@dimen/small"
                    android:padding="10dp" />

                <RelativeLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/fifty_but"
                        android:layout_width="80dp"
                        android:layout_height="35dp"
                        android:background="@drawable/border_grey_rec"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@color/darkgrey"

                        android:text="$50" />

                    <TextView
                        android:id="@+id/hundred_but"
                        android:layout_width="80dp"
                        android:layout_height="35dp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/border_grey_rec"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@color/darkgrey"

                        android:text="$100" />

                    <TextView
                        android:id="@+id/onefifty_but"
                        android:layout_width="80dp"
                        android:layout_height="35dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/border_grey_rec"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@color/darkgrey"
                        android:text="$150" />


                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

        <TextView
            android:id="@+id/addmoney"
            android:text="@string/addhitechmoney"
            android:textSize="@dimen/medium"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@color/colorPrimaryDark"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="45dp" />
        <ProgressBar
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:id="@+id/prgressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
